Look-dev volume shader glitch (zero scale object volume) #69070

Closed
opened 2019-08-23 02:18:58 +02:00 by Zach Hixson · 6 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 417.35

Blender Version
Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: f6cb5f5449

Short description of error
When using look-dev mode, I have found that if you have an object which has a volume scatter shader applied to it, who's size gets animated to "0" the entire screen fills with that volume effect IE: You stop being able to see anything because the air is now a thick smoke and it's all just a solid color.

Exact steps for others to reproduce the error

  1. Create the main object to animate, as well as a cube or something simple so that we can observe the bug
  2. On the main object, apply a material that uses the "volume scatter," shader. All settings can be left at default.
  3. animate the scale of the main object to go from 1 -> 0.
  4. The frame which the object hits zero, the screen fills up entirely with the volume and you can no longer see the rest of the scene.

below is a screenshot and a sample file where I was able to reproduce the bug.

example.png
bugged.blend

**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 417.35 **Blender Version** Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: `f6cb5f5449` **Short description of error** When using look-dev mode, I have found that if you have an object which has a volume scatter shader applied to it, who's size gets animated to "0" the entire screen fills with that volume effect IE: You stop being able to see anything because the air is now a thick smoke and it's all just a solid color. **Exact steps for others to reproduce the error** 1. Create the main object to animate, as well as a cube or something simple so that we can observe the bug 2. On the main object, apply a material that uses the "volume scatter," shader. All settings can be left at default. 3. animate the scale of the main object to go from 1 -> 0. 4. The frame which the object hits zero, the screen fills up entirely with the volume and you can no longer see the rest of the scene. below is a screenshot and a sample file where I was able to reproduce the bug. ![example.png](https://archive.blender.org/developer/F7690171/example.png) [bugged.blend](https://archive.blender.org/developer/F7690173/bugged.blend)
Author

Added subscriber: @ZachHixson

Added subscriber: @ZachHixson

Added subscriber: @Jaxxtrend

Added subscriber: @Jaxxtrend
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

There are usually better ways than scaling to zero, but can confirm, this shouldnt happen.

There are usually better ways than scaling to zero, but can confirm, this shouldnt happen.
Philipp Oeser changed title from Look-dev volume shader glitch to Look-dev volume shader glitch (zero scale object volume) 2019-08-29 12:34:22 +02:00

This issue was referenced by 0366c46ec6

This issue was referenced by 0366c46ec64e42135953aad1de41c6976947e7a4

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Clément Foucault self-assigned this 2020-01-27 19:53:03 +01:00
Sign in to join this conversation.
5 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#69070
No description provided.