Fix T69070 EEVEE: Volume shader glitch if object as axis with 0.0 scale